<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Itolon</string>
    <string name="feed">Home</string>
    <string name="search_track">Search Track</string>
    <string name="incrivez_vous_c_set_gratuit">Incrivez-vous c\'set gratuit\n Crez vos collections de Musique\n Telechargez des millions de Chansons</string>
    <string name="veuillez_saisir_le_code">Veuillez saisir le code\envoye au +233-58-86-63</string>
    <string name="cancel_button_title">Cancel</string>
    <string name="ok_button_title">OK</string>
    <string name="spinner_title">Select</string>
    <string name="nom_poanom"><![CDATA[Nom & Poanom]]></string>
<!--    <string name="lorem_ipsum_is_dummy_text_which_has_no_meaning">Lorem Ipsum is dummy text which\n has no meaning</string>-->
    <string name="agree">Yes</string>
    <string name="disagree">No</string>
    <string name="facebook_app_id">798074334021800</string>
    <string name="albem_nom_artist_nom_de_musique">Albem, Nom Artist, Nom de Musique</string>
    <string name="no_result_found">No Result Found</string>
    <string name="prenom">Prenom</string>
    <string name="nom_de_l_enterprise">Nom de l\'enterprise</string>
    <string name="addresse">Addresse</string>
    <string name="ville">Ville</string>
    <string name="region">Region</string>
    <string name="tel_numero">Tel Numero</string>
    <string name="website">Website</string>
    <string name="media_d_internet">Media d Internet</string>
    <string name="musique">Musique</string>
    <string name="music_video">Music Video</string>
    <string name="concert_publication">Concert Publication</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">LogIn</string>
    <string name="select_a_category">Select a Category</string>
    <string name="sauvegarder">Sauvegarder</string>
    <string name="about">About</string>
    <string name="more_by">More by:</string>
    <string name="most_popular_tracks">Most Popular Tracks</string>
    <string name="similar_to">Similar to</string>
    <string name="tracklist">Tracklist</string>
    <string name="shuffle">Shuffle</string>
    <string name="player_avec_orange_money">Player AVEC Orange Money</string>
    <string name="verifier">Verifier</string>
    <string name="renvoyer_le_code">Renvoyer le code</string>
    <string name="create_playlist">Create Playlist</string>
    <string name="create">Create</string>
    <string name="playlist_name">Playlist name</string>
    <string name="enter_description">Enter Description</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="password">Password</string>
    <string name="se_connector">Se Connector</string>
    <string name="not_have_an_account">Not have an Account?</string>
    <string name="register">Register</string>
    <string name="your_playlists">Your Playlists</string>
    <string name="soumettre">Soumettre</string>
<!--    <string name="artists_in_playlist">Artists in Playlist</string>-->
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="mes_telechargements">Mes Telechargements</string>
<!--    <string name="artists">Artists</string>-->
    <string name="albems">Albums</string>
    <string name="playlists">Playlists</string>
    <string name="stars">Top Stars</string>
    <string name="video">Video</string>
    <string name="artist_profile">Artist Profile</string>
    <string name="artist_image">Artist Image</string>
    <string name="artist_biographie">Artist Biographie</string>
    <string name="telecharger_vos_musique">Telecharger Vos Musique</string>
    <string name="telecharger_vos_musique_video">Telecharger Vos Musique Video</string>
    <string name="telecharger_vos_musique_concert">Telecharger Vos Musique Concert</string>
    <string name="logout">Logout</string>
    <string name="language">Language</string>
    <string name="notifications">Notifications</string>
    <string name="contact_us">Contact Us</string>
    <string name="my_playlists">My Playlists</string>
    <string name="posts">Posts</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="term_and_conditions">Term and Conditions</string>
    <string name="about_us">About US</string>
    <string name="upload_track">Upload Track</string>
    <string name="post">Post</string>
    <string name="add_comments">Add Comments</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
<!--    <string name="playlist" tools:ignore="DuplicateDefinition,ExtraTranslation">Playlist</string>-->
    <string name="artists_in_playlist">Artists in Playlist</string>
    <string name="server_is_not_responding">Server is not responding</string>
    <string name="your_library">Your Library</string>
</resources>
