<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:id="@+id/parent_layout"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/screen_background" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/screen_background"
        android:fillViewport="true"
        android:paddingBottom="@dimen/_20sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/action_bar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_65sdp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/back_imageview"
                    android:layout_width="@dimen/_38sdp"
                    android:layout_height="@dimen/_28sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:layout_marginLeft="@dimen/_2sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_arrow_back_black_24dp"
                    android:visibility="visible" />

                <ImageView
                    android:id="@+id/itolon_logo"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/itolon_logo"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15ssp"
                    android:visibility="visible" />

                <ImageView
                    android:id="@+id/back_arrow_imageview"
                    android:layout_width="@dimen/_38sdp"
                    android:layout_height="@dimen/_28sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:layout_marginLeft="@dimen/_2sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="?attr/selectableItemBackground"
                    android:src="@drawable/ic_arrow_back_black_24dp"
                    android:visibility="gone" />
            </RelativeLayout>


            <LinearLayout
                android:id="@+id/search_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/itolon_logo"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:visibility="gone">

                <EditText
                    android:id="@+id/album_search_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/blue_background"
                    android:drawableLeft="@drawable/ic_search_black_24dp"
                    android:drawableRight="@drawable/ic_mic_black_24dp"
                    android:drawablePadding="@dimen/_8sdp"
                    android:gravity="left"
                    android:hint="Albem, Nom Artist, Nom de Musique"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>

            <TextView
                android:id="@+id/title_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/search_edittext"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginLeft="@dimen/_12sdp"
                android:gravity="center_vertical"
                android:padding="@dimen/_4sdp"
                android:text="@string/create_playlist"
                android:textColor="@color/white"
                android:textSize="@dimen/_17ssp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@color/white" />

            <RelativeLayout
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_90sdp"
                android:layout_margin="@dimen/_5sdp"
                android:background="@drawable/maxresdefault"
                android:gravity="right">

                <ImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="right|end"
                    android:layout_margin="@dimen/_10sdp"
                    android:src="@drawable/ic_playlist" />

                          </RelativeLayout>

            <LinearLayout
                android:id="@+id/create_playlist_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/playlist_name_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_95sdp"
                    android:background="@drawable/border_playlist_edittext"
                    android:drawablePadding="@dimen/_8sdp"

                    android:gravity="left"
                    android:hint="@string/playlist_name"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/playlist_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/playlist_description_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:background="@drawable/border_playlist_edittext"
                    android:drawablePadding="@dimen/_8sdp"
                    android:gravity="top|left"
                    android:hint="@string/enter_description"
                    android:inputType="textMultiLine"
                    android:lines="8"
                    android:maxLines="10"
                    android:minLines="6"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

<!--            <LinearLayout-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center"-->
<!--                android:layout_marginTop="@dimen/_10sdp"-->
<!--                android:background="@drawable/round_button">-->

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/create_playlist_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:cornerRadius="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_4sdp"
                    android:background="@drawable/round_button"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:paddingLeft="@dimen/_58sdp"
                    android:textAllCaps="false"
                    android:paddingTop="@dimen/_11sdp"
                    android:paddingRight="@dimen/_58sdp"
                    android:paddingBottom="@dimen/_11sdp"
                    android:text="@string/create"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11ssp" />
<!--            </LinearLayout>-->

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>